Fixed Control Bar Hiding on Smaller Resolutions + Improved Colour Scheme

--- a/src/components/ControlBar.css
+++ b/src/components/ControlBar.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 97vw;
+	width: 100vw;
 }
 
 .unity-player-control-bar {
@@ -10,7 +10,7 @@
 	align-items: center;
 	justify-content: space-between;
 	color: white;
-	padding: 10px 20px;
+	height: 45px;
 	font-family: sans-serif;
 	font-size: 16px;
 
@@ -35,30 +35,35 @@
 	top: 0;
 }
 
-.unity-player-control-bar .left-section,
-.unity-player-control-bar .right-section {
+.unity-player-control-bar .left-section {
 	display: flex;
 	align-items: center;
 	gap: 12px;
+	padding-left: 15px;
+}
+
+.unity-player-control-bar .right-section {
+	display: flex;
+	align-items: center;
+	gap: 6px;
+	padding-right: 15px;
 }
 
 .unity-player-control-bar .center-section {
 	position: absolute;
-	left: 48.5%;
+	left: 50%;
 	transform: translateX(-50%);
 	display: flex;
 	align-items: center;
 }
 
-.unity-player-control-bar .left-section {
-	gap: 12px;
-}
+
 
 .unity-player-control-bar .divider {
-	height: 24px;
-	width: 1px;
-	background-color: #999;
-	margin: 0 3px;
+	width: 2px;
+	height: 45px;
+	margin: 0px 3px;
+	background-color: #777586;
 }
 
 .unity-player-control-bar .logo {
@@ -66,6 +71,7 @@
 	align-items: center;
 	gap: 8px;
 	font-weight: bold;
+	padding: 10px 20px;
 }
 
 .unity-player-control-bar .icon {
@@ -75,6 +81,7 @@
 	mask-position: center;
 	mask-size: contain;
 	transition-duration: 0.3s;
+	padding: 5px;
 }
 
 .unity-player-control-bar .icon:hover {
@@ -86,13 +93,21 @@
 
 .control-bar-toggle-button {
 	width: 12vw;
-	height: 40px;
+	height: 35px;
 	background: #3498db;
 	border-bottom-left-radius: 50px;
 	border-bottom-right-radius: 50px;
 	position: relative;
 	overflow: hidden;
-	background-color: red;
+	background-color: #141821;
 	left: 44%;
 	position: absolute;
+	opacity: 0.2;
+	transition-duration: 0.6s;
+}
+
+.control-bar-toggle-button:hover {
+	opacity: 1;
+	transition: opacity 0.25s ease;
+	transition-duration: 0.6s;
 }
